Switch Prisma to PostgreSQL and add indexes
Migrated Prisma datasource from SQLite to PostgreSQL and added multiple indexes to improve query performance. Updated build scripts to run `prisma generate` before building and after installing dependencies. Enabled external packages for server components in Next.js config. Added Vercel deployment configuration for Next.js with Bun.

--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "build": "prisma generate && next build --turbopack",
     "start": "next start",
     "lint": "eslint",
     "reset-views24h": "node scripts/reset-views24h.js",
-    "cleanup-view-logs": "node scripts/cleanup-view-logs.js"
+    "cleanup-view-logs": "node scripts/cleanup-view-logs.js",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@auth/core": "^0.40.0",
