--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@trpc/next": "^11.5.0",
     "@trpc/react-query": "^11.5.0",
     "@trpc/server": "^11.5.0",
+    "@vercel/og": "^0.8.5",
     "canvas": "^3.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
