--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fontsource/noto-color-emoji": "^5.2.8",
     "@fontsource/noto-emoji": "^5.2.6",
     "@fontsource/noto-sans": "^5.2.7",
+    "@fontsource/roboto": "^5.2.6",
     "@prisma/client": "^6.14.0",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
