--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fontsource/noto-emoji": "^5.2.6",
     "@fontsource/noto-sans": "^5.2.7",
     "@fontsource/roboto": "^5.2.6",
+    "@napi-rs/canvas": "^0.1.77",
     "@prisma/client": "^6.14.0",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
