--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "next": "15.5.0",
     "next-auth": "^5.0.0-beta.29",
     "nuqs": "^2.5.1",
+    "playwright": "^1.55.0",
     "prisma": "^6.14.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
