Add Docker support and health check endpoint
Introduces Dockerfile, .dockerignore, and updates docker-compose.yml for Bun-based deployment. Adds deploy.sh for simplified Docker operations. Implements a health check API route for service monitoring. Updates .env.example with PORT variable and adds a comprehensive README.md.

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,8 @@ DATABASE_URL="file:./dev.db"
 # DATABASE_URL="url-to-db"
 # DIRECT_URL="url-to-db"
 
+PORT=3000
+
 # Auth.js
 NEXTAUTH_URL="http://localhost:3000"
 NEXTAUTH_SECRET="your-secret-key"
