Add admin data deletion management UI
Implements a full admin interface for managing user data deletion requests, including filtering, pagination, status updates, and statistics. Adds new Prisma model for DataDeletionRequest, supporting tracking and processing. Integrates reCAPTCHA setup documentation and environment variables, and introduces several new UI components and hooks for admin and reCAPTCHA functionality.

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,7 @@ DISCORD_CLIENT_SECRET="your-discord-client-secret"
 
 # Utilisateurs autorisés
 AUTHORIZED_USERS="your-discord-user-id"
+
+# reCAPTCHA
+NEXT_PUBLIC_RECAPTCHA_SITE_KEY=your_site_key_here
+RECAPTCHA_SECRET_KEY=your_secret_key_here
