--- a/package.json
+++ b/package.json
@@ -20,26 +20,34 @@
     "@fontsource/noto-sans": "^5.2.7",
     "@fontsource/roboto": "^5.2.6",
     "@prisma/client": "^6.14.0",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@tanstack/react-query": "^5.85.5",
     "@trpc/client": "^11.5.0",
     "@trpc/next": "^11.5.0",
     "@trpc/react-query": "^11.5.0",
     "@trpc/server": "^11.5.0",
+    "@types/react-google-recaptcha": "^2.1.9",
     "@vercel/og": "^0.8.5",
     "canvas": "^3.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
     "jsdom": "^26.1.0",
-    "lucide-react": "^0.541.0",
+    "lucide-react": "^0.542.0",
     "next": "15.5.0",
     "next-auth": "^5.0.0-beta.29",
     "nuqs": "^2.5.1",
     "prisma": "^6.14.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-google-recaptcha": "^3.1.0",
     "superjson": "^2.2.2",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.1"
