Improve data deletion flow and add dev/test features
Adds @faker-js/faker for generating test data in development, introduces a dev-mode bypass for reCAPTCHA validation, and improves Prisma connection stability with a new ensurePrismaConnection utility. The admin API now handles groupBy errors gracefully, and the data deletion page includes a test data generator and clearer dev-mode UI for reCAPTCHA.

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@auth/core": "^0.40.0",
     "@auth/nextjs": "^0.0.0-380f8d56",
     "@auth/prisma-adapter": "^2.10.0",
+    "@faker-js/faker": "^10.0.0",
     "@fontsource/noto-color-emoji": "^5.2.8",
     "@fontsource/noto-emoji": "^5.2.6",
     "@fontsource/noto-sans": "^5.2.7",
