Improve Prisma connection handling and caching logic
Enhanced Prisma client configuration for better stability with Neon and long-lived connections. Added automatic retry logic for database operations and connection recovery. Updated userDataCache service to use retry logic for cache reads and writes, improving reliability and error handling. Updated environment and Docker Compose files to clarify Neon connection strings and support DIRECT_URL.

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 # Base de données
 DATABASE_URL="file:./dev.db"
-# PROD
-# DATABASE_URL="url-to-db"
-# DIRECT_URL="url-to-db"
+# PROD (Neon)
+# DATABASE_URL="postgresql://username:password@hostname:port/database?sslmode=require&pgbouncer=true"
+# DIRECT_URL="postgresql://username:password@hostname:port/database?sslmode=require"
 
 PORT=3000
 
