--- a/package.json
+++ b/package.json
@@ -14,57 +14,59 @@
   "dependencies": {
     "@auth/core": "^0.40.0",
     "@auth/nextjs": "^0.0.0-380f8d56",
-    "@auth/prisma-adapter": "^2.10.0",
-    "@faker-js/faker": "^10.0.0",
-    "@fontsource/noto-color-emoji": "^5.2.8",
-    "@fontsource/noto-emoji": "^5.2.6",
-    "@fontsource/noto-sans": "^5.2.7",
-    "@fontsource/roboto": "^5.2.6",
+    "@auth/prisma-adapter": "^2.11.1",
+    "@faker-js/faker": "^10.1.0",
+    "@fontsource/noto-color-emoji": "^5.2.10",
+    "@fontsource/noto-emoji": "^5.2.10",
+    "@fontsource/noto-sans": "^5.2.10",
+    "@fontsource/roboto": "^5.2.9",
     "@prisma/client": "^6.14.0",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
-    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.6",
-    "@radix-ui/react-separator": "^1.1.7",
-    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.2.8",
-    "@tanstack/react-query": "^5.85.5",
-    "@trpc/client": "^11.5.0",
-    "@trpc/next": "^11.5.0",
-    "@trpc/react-query": "^11.5.0",
-    "@trpc/server": "^11.5.0",
+    "@tanstack/react-query": "^5.90.12",
+    "@trpc/client": "^11.7.2",
+    "@trpc/next": "^11.7.2",
+    "@trpc/react-query": "^11.7.2",
+    "@trpc/server": "^11.7.2",
     "@types/react-google-recaptcha": "^2.1.9",
     "@vercel/og": "^0.8.5",
     "canvas": "^3.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.23.12",
-    "jsdom": "^26.1.0",
-    "lucide-react": "^0.542.0",
+    "framer-motion": "^12.23.26",
+    "jsdom": "^27.3.0",
+    "lucide-react": "^0.560.0",
     "next": "15.5.7",
     "next-auth": "^5.0.0-beta.29",
-    "nuqs": "^2.5.1",
+    "nuqs": "^2.8.5",
     "prisma": "^6.14.0",
-    "react": "19.1.2",
-    "react-dom": "19.1.2",
+    "react": "19.2.1",
+    "react-dom": "19.2.1",
     "react-google-recaptcha": "^3.1.0",
-    "superjson": "^2.2.2",
-    "tailwind-merge": "^3.3.1",
-    "zod": "^4.1.1"
+    "sharp": "^0.34.5",
+    "superjson": "^2.2.6",
+    "tailwind-merge": "^3.4.0",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/jsdom": "^21.1.7",
-    "@types/node": "^20",
+    "@types/jsdom": "^27.0.0",
+    "@types/node": "^25",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/sharp": "^0.32.0",
     "eslint": "^9",
-    "eslint-config-next": "15.5.7",
+    "eslint-config-next": "16.0.8",
+    "node-gyp": "^12.1.0",
     "tailwindcss": "^4",
-    "tw-animate-css": "^1.3.7",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
 }
