--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fontsource/noto-emoji": "^5.2.10",
     "@fontsource/noto-sans": "^5.2.10",
     "@fontsource/roboto": "^5.2.9",
+    "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "7.1.0",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
@@ -37,6 +38,7 @@
     "@types/react-google-recaptcha": "^2.1.9",
     "@vercel/og": "^0.8.5",
     "canvas": "^3.2.0",
+    "pg": "^8.13.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.26",
