--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fontsource/roboto": "^5.2.9",
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "7.1.0",
+    "effect": "^3.10.4",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.8",
