Update Dockerfile to use Node 22, replace Bun with npm for dependency management, and ensure Prisma client generation is executed securely. Add 'fast-check' dependency to package.json and bun.lock for enhanced testing capabilities.

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/react-google-recaptcha": "^2.1.9",
     "@vercel/og": "^0.8.5",
     "canvas": "^3.2.0",
+    "fast-check": "^3.23.1",
     "pg": "^8.13.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
