Add trend snapshot functionality and related UI components. Introduce new TrendSnapshot model in Prisma schema, update admin settings for trend management, and enhance navigation with a trends section. Implement TRPC query for fetching trends based on various criteria.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint",
     "reset-views24h": "node scripts/reset-views24h.js",
     "cleanup-view-logs": "node scripts/cleanup-view-logs.js",
+    "snapshot-trends": "node scripts/snapshot-trends.js",
     "postinstall": "prisma generate"
   },
   "dependencies": {
