--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@fontsource/roboto": "^5.2.9",
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "7.1.0",
-    "effect": "^3.10.4",
+    "@prisma/config": "^7.3.0",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.8",
@@ -40,16 +40,17 @@
     "@types/react-google-recaptcha": "^2.1.9",
     "@vercel/og": "^0.8.5",
     "canvas": "^3.2.0",
-    "fast-check": "^3.23.1",
-    "pg": "^8.13.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "effect": "^3.10.4",
+    "fast-check": "^3.23.1",
     "framer-motion": "^12.23.26",
     "jsdom": "^27.3.0",
     "lucide-react": "^0.560.0",
     "next": "15.5.7",
     "next-auth": "^5.0.0-beta.29",
     "nuqs": "^2.8.5",
+    "pg": "^8.13.1",
     "prisma": "7.1.0",
     "react": "19.2.1",
     "react-dom": "19.2.1",
